--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Indra Prashanth S J - QE Resume.pdf')"
           >
             Download CV
           </button>
@@ -65,7 +65,7 @@
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/indraprashanth09?tab=repositories'"
           />
         </div>
       </div>
