--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div>
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
-          <li><a href="#experience">Experience</a></li>
+          <li><a href="#skills">Skills</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -29,7 +29,7 @@
         </div>
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
-          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
@@ -54,18 +54,19 @@
             Contact Info
           </button>
         </div>
-        <div id="socials-container">
+        <div id="socials-container" >
           <img
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://www.linkedin.com/in/indra-prashanth-sj'"
           />
-          <img
-            src="./assets/github.png"
-            alt="My Github profile"
-            class="icon"
-            onclick="location.href='https://github.com/indraprashanth09?tab=repositories'"
+          <img 
+            src="./assets/github.png" 
+            alt="My Github profile" 
+            class="icon" 
+            onclick="location.href='https://github.com/indraprashanth09?tab=repositories'" 
+            title="I'm still working on some frameworks to be pushed to GitHub."
           />
         </div>
       </div>
@@ -124,16 +125,16 @@
           src="./assets/arrow.png"
           alt="Arrow icon"
           class="icon arrow"
-          onclick="location.href='./#experience'"
+          onclick="location.href='./#skills'"
         />
       </section>
-      <section id="experience">
+      <section id="skills">
         <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience</h1>
-        <div class="experience-details-container">
+        <h1 class="title">Skills</h1>
+        <div class="skills-details-container">
           <div class="about-containers">
             <div class="details-container">
-              <h2 class="experience-sub-title">Programming Stack</h2>
+              <h2 class="skills-sub-title">Programming Stack</h2>
               <div class="article-container">
                 <article>
                   <img
@@ -143,7 +144,7 @@
                   />
                   <div>
                     <h3>Java</h3>
-                    <p>Intermediate</p>
+                    <p>Experienced</p>
                   </div>
                 </article>
                 <article>
@@ -154,7 +155,7 @@
                   />
                   <div>
                     <h3>JavaScript</h3>
-                    <p>Intermediate</p>
+                    <p>Experienced</p>
                   </div>
                 </article>
                 <article>
@@ -165,7 +166,7 @@
                   />
                   <div>
                     <h3>SQL</h3>
-                    <p>Intermediate</p>
+                    <p>Experienced</p>
                   </div>
                 </article>
                 <article>
@@ -176,28 +177,6 @@
                   />
                   <div>
                     <h3>Python</h3>
-                    <p>Intermediate</p>
-                  </div>
-                </article>
-                <article>
-                  <img
-                    src="./assets/checkmark.png"
-                    alt="Experience icon"
-                    class="icon"
-                  />
-                  <div>
-                    <h3>HTML</h3>
-                    <p>Intermediate</p>
-                  </div>
-                </article>
-                <article>
-                  <img
-                    src="./assets/checkmark.png"
-                    alt="Experience icon"
-                    class="icon"
-                  />
-                  <div>
-                    <h3>CSS</h3>
                     <p>Intermediate</p>
                   </div>
                 </article>
@@ -226,7 +205,7 @@
               </div>
             </div>
             <div class="details-container">
-              <h2 class="experience-sub-title">Automation Tools</h2>
+              <h2 class="skills-sub-title">Automation Tools</h2>
               <div class="article-container">
                 <article>
                   <img
@@ -258,17 +237,6 @@
                   />
                   <div>
                     <h3>TestNG</h3>
-                    <p>Experienced</p>
-                  </div>
-                </article>
-                <article>
-                  <img
-                    src="./assets/checkmark.png"
-                    alt="Experience icon"
-                    class="icon"
-                  />
-                  <div>
-                    <h3>JUnit</h3>
                     <p>Experienced</p>
                   </div>
                 </article>
@@ -343,7 +311,7 @@
           <div class="nav-links-container">
             <ul class="nav-links">
               <li><a href="#about">About</a></li>
-              <li><a href="#experience">Experience</a></li>
+              <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
