Added Experience Section
Added new section to the navbar and to the page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
+          <li><a href="#experience">Experience</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -30,7 +31,7 @@
         <div class="menu-links">
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
-          <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
+          <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -276,6 +277,51 @@
               </div>
             </div>
           </div>
+        </div>
+        <img
+          src="./assets/arrow.png"
+          alt="Arrow icon"
+          class="icon arrow"
+          onclick="location.href='./#experience'"
+        />
+      </section>
+      <section id="experience">
+        <p class="section__text__p1">Lets talk about </p>
+        <h1 class="title">Experience</h1>
+        <div class>
+          <div class="about-details-container">
+            <div class="about-containers">
+              <div class="details-container">
+                <img
+                  src="./assets/LTI_Lets_solve.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <h3>Quality Engineer, Larsen & Toubro Infotech</h3>
+                <p><b>Jan 2021 - Jul 2022</b></p>
+                <br/><b>Elevating Testing Efficiency:</b> Orchestrated test plans for 5+ projects, boosting efficiency by 25%.
+                <br/><b>Automation Mastery:</b> Reduced testing time by 30%, saving 20 hours per iteration.
+                <br/><b>Ensuring Software Integrity:</b> Validated 100+ API interactions, improving software reliability by 25%.
+                <br/><b>Efficient CI/CD Integration:</b> Integrated Jenkins, slashing time-to-market by 40%.
+                <br/><b>Enhanced Stakeholder Communication:</b> Delivered detailed quality reports, elevating client satisfaction by 15%.
+                <br/><b>Comprehensive Test Data Management:</b> Maintained extensive datasets, enhancing test coverage by 20% with 95% accuracy.
+                </div>
+              <div class="details-container">
+                <img
+                  src="./assets/corptia_logo.jpeg"
+                  alt="Intern icon"
+                  class="icon"
+                />
+                <h3>Web Developer Intern, Corptia</h3>
+                <p><b>May 2019 - Jul 2019</b></p>
+                <br/><b>Development Collaboration:</b> Designed captivating web interfaces, collaborating closely with senior developers.
+                <br/><b>Debugging Expertise:</b> Employed advanced browser tools and server-side techniques to ensure flawless web solutions.
+                <br/><b>Code Review Contributions:</b> Offered insightful feedback, enhancing code quality and maintainability.
+                <br/><b>Problem-Solving Prowess:</b> Played a pivotal role in debugging and resolving intricate issues, showcasing strong development skills
+                <br/><b>Integration with Senior Developers:</b> Collaborated seamlessly, crafting innovative and polished web applications with expertise and finesse.
+              </div>
+            </div>
+         </div>
         </div>
         <img
           src="./assets/arrow.png"
