--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#experience">Experience</a></li>
+          <li><a href="#certification">Certification</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -32,6 +33,7 @@
           <li><a href="#about" onclick="toggleMenu()">About</a></li>
           <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
           <li><a href="#experience" onclick="toggleMenu()">Experience</a></li>
+          <li><a href="#certification" onclick="toggleMenu()">Certification</a></li>
           <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
         </div>
       </div>
@@ -327,12 +329,44 @@
           src="./assets/arrow.png"
           alt="Arrow icon"
           class="icon arrow"
+          onclick="location.href='./#certification'"
+        />
+      </section>
+      <section id="certification">
+        <p class="section__text__p1">View My Recent</p>
+        <h1 class="title">Certification</h1>
+        <div class="certification-details-container">
+          <div class="about-containers">
+            <div class="details-container color-container">
+              <div class="article-container">
+                <img
+                  src="./assets/CTFL-AT.png"
+                  alt="Project 1"
+                  class="certification-img"
+                />
+              </div>
+              <h2 class="experience-sub-title project-title">CTFL - Agile Tester</h2>
+              <div class="btn-container">
+                <button
+                  class="btn btn-color-2 project-btn"
+                  onclick="location.href='https://atsqa.org/certified-testers/profile/8cbf97fbe5b247489a0f125b016779de'"
+                >
+                  View Details
+                </button>
+              </div>
+            </div>
+        </div>
+        <img
+          src="./assets/arrow.png"
+          alt="Arrow icon"
+          class="icon arrow"
           onclick="location.href='./#contact'"
         />
       </section>
+  
       <section id="contact">
-        <p class="section__text__p1">Get in Touch</p>
-        <h1 class="title">Contact Me</h1>
+        <p class="section__text__p1"></p>
+        <h1 class="title">Let's Collaborate, Together We Thrive!</h1>
         <div class="contact-info-upper-container">
           <div class="contact-info-container">
             <img
