--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
         <p class="section__text__p1">View My Recent</p>
         <h1 class="title">Certification</h1>
         <div class="certification-details-container">
-          <div class="about-containers">
+          <div class="certification-containers">
             <div class="details-container color-container">
               <div class="article-container">
                 <img
@@ -345,7 +345,7 @@
                   class="certification-img"
                 />
               </div>
-              <h2 class="experience-sub-title project-title">CTFL - Agile Tester</h2>
+              <h2 class="certification-sub-title project-title">CTFL - Agile Tester</h2>
               <div class="btn-container">
                 <button
                   class="btn btn-color-2 project-btn"
