--- a/index.html
+++ b/index.html
@@ -391,8 +391,10 @@
           <div class="nav-links-container">
             <ul class="nav-links">
               <li><a href="#about">About</a></li>
-              <li><a href="#skills">Skills</a></li>
-              <li><a href="#contact">Contact</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#certification">Certification</a></li>
+          <li><a href="#contact">Contact</a></li>
             </ul>
           </div>
         </nav>
