--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Indra Prashanth S J - QE Resume.pdf')"
+            onclick="window.open('./assets/Indra Prashanth S J - Resume 2024.pdf')"
           >
             Download CV
           </button>
@@ -374,7 +374,7 @@
               alt="Email icon"
               class="icon contact-icon email-icon"
             />
-            <p><a href="mailto:indraprashanthsj@outlook.com">indraprashanthsj@outlook.com</a></p>
+            <p><a href="mailto:indraprashanthsj@outlook.com">indraprashanthsj@gmail.com</a></p>
           </div>
           <div class="contact-info-container">
             <img
