--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/Indra Prashanth S J - Resume 2024.pdf')"
+            onclick="window.open('./assets/Indra Prashanth S J 2024.pdf')"
           >
             Download CV
           </button>
